--- a/config_bsp.ini
+++ b/config_bsp.ini
@@ -1,81 +1,50 @@
 ;========================================
-; Configuração BSP - Binary Space Partitioning
-; Subdivisão automática de lotes urbanos
+; Configuração do Algoritmo BSP
+; Versão Refatorada - 2026-01-07
 ;========================================
+
+[BSP]
+
+;----------------------------------------
+; SEED (Opcional)
+; Deixe vazio ou 'None' para seed aleatória
+;----------------------------------------
+SEED=42
 
 ;----------------------------------------
 ; Dimensões da Imagem
 ;----------------------------------------
-; Tamanho geral da imagem gerada
-; IMPORTANTE: As posições do quadrilátero devem estar dentro desses limites
 IMAGE_WIDTH=1300
 IMAGE_HEIGHT=1300
 
 ;----------------------------------------
-; Subdivisões (Splits)
+; Quadrilátero Inicial (área total)
 ;----------------------------------------
-; Quantidade de splits pelo BSP em cada "espaço quadrilátero"
-; Valores maiores = mais subdivisões = lotes menores
-MIN_SPLITS_IN_X_AXIS=1
-MIN_SPLITS_IN_Y_AXIS=1
-MAX_SPLITS_IN_X_AXIS=5
-MAX_SPLITS_IN_Y_AXIS=5
-
-;----------------------------------------
-; Quantidade de Lotes
-;----------------------------------------
-; Quantidade mínima de lotes/separações
-; NOTA: Pode não conseguir chegar lá - depende dos outros parâmetros também
-MIN_AMOUNT_OF_LOTS=45
-
-;----------------------------------------
-; Dimensões dos Lotes
-;----------------------------------------
-; Dimensões mínimas para cada lote (em pixels)
-MIN_LOT_WIDTH=125
-MIN_LOT_HEIGHT=155
-
-; Dimensões máximas para cada lote (em pixels)
-MAX_LOT_WIDTH=1000
-MAX_LOT_HEIGHT=1000
-
-;----------------------------------------
-; Quadrilátero Inicial
-;----------------------------------------
-; Posições dos 4 vértices do quadrilátero inicial
-; Este é o espaço que será subdividido em lotes
-; Formato: (x, y) para cada vértice
-
-; Vértice Superior Esquerdo (Top Left)
 QUAD_TOP_LEFT_X=100
 QUAD_TOP_LEFT_Y=200
-
-; Vértice Superior Direito (Top Right)
-QUAD_TOP_RIGHT_X=600
+QUAD_TOP_RIGHT_X=1100
 QUAD_TOP_RIGHT_Y=200
-
-; Vértice Inferior Direito (Bottom Right)
-QUAD_BOTTOM_RIGHT_X=650
+QUAD_BOTTOM_RIGHT_X=1150
 QUAD_BOTTOM_RIGHT_Y=1200
-
-; Vértice Inferior Esquerdo (Bottom Left)
 QUAD_BOTTOM_LEFT_X=150
-QUAD_BOTTOM_LEFT_Y=1100
+QUAD_BOTTOM_LEFT_Y=1150
 
 ;----------------------------------------
-; Aleatoriedade
+; Limites de Lotes
+; Valores menores permitem mais subdivisões
 ;----------------------------------------
-; Seed para geração aleatória
-; Mude este valor para gerar resultados diferentes a cada rodagem
-; Mesmo seed = mesmo resultado (reproduzível)
-SEED=333
+MIN_AMOUNT_OF_LOTS=45
+MIN_LOT_WIDTH=80
+MIN_LOT_HEIGHT=80
+MAX_LOT_WIDTH=400
+MAX_LOT_HEIGHT=400
 
-;========================================
-; Dicas de Configuração
-;========================================
-; - Para lotes maiores: Aumente MIN_LOT_WIDTH/HEIGHT
-; - Para mais lotes: Aumente MIN_AMOUNT_OF_LOTS e MAX_SPLITS
-; - Para lotes mais regulares: Use MIN_SPLITS próximo de MAX_SPLITS
-; - Para variação: Aumente diferença entre MIN e MAX_SPLITS
-; - Para testar: Mude apenas o SEED e compare resultados
-;========================================
+;----------------------------------------
+; Limites de Subdivisões
+; Número de divisões é calculado por MIN_WIDTH/MIN_HEIGHT
+; MAX_SPLITS limita o máximo
+;----------------------------------------
+MIN_SPLITS_IN_X_AXIS=1
+MAX_SPLITS_IN_X_AXIS=5
+MIN_SPLITS_IN_Y_AXIS=1
+MAX_SPLITS_IN_Y_AXIS=5
